--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1,5 +1,5 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/forms.css">
+    <link rel="stylesheet" href="/css/form.css">
     <link rel="stylesheet" href="/css/product.css">
 </head>
 
@@ -28,6 +28,7 @@
                 <input type="hidden" value="<%= product._id %>" name="productId">
             <% } %>
 
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
         </form>
     </main>
